fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(160, 16, 160);
 }
 
 code {
